Tue Mar 25 12:46:33 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/unittests/facet_query_type_1.py,xappy/indexerconnection.py,
	  xappy/searchconnection.py: More facet selection improvements from
	  Tom Winch: allow a set of associations between query types and
	  facets to be stored in the database configuration, and use these
	  facets to either prevent or prefer certain facets from being
	  chosen for a particular query type.  (Query types are specified
	  by an additional parameter to the search() method.)

Wed Mar 19 01:42:29 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py: Remove
	  backwards compatibility support for reading fieldactions from a
	  file.  It just makes the code more complex, and xappy really
	  needs to use a more recent version of xapian.

Tue Mar 18 21:34:29 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS: Add Tom Winch.

Tue Mar 18 21:29:25 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/unittests/facet_hierarchy_1.py,xappy/indexerconnection.py,
	  xappy/searchconnection.py: Add support for defining a facet
	  heirarchy, for use when selecting facets.  Not yet used, but is
	  stored in the database configuration, and available to both the
	  indexer connection and the search connection.

Mon Mar 17 16:46:33 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Fix setting of stemmer so that it
	  still works with replaylog enabled.

Thu Feb 21 13:12:03 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update to new tarballs which actually work,
	  this time.

Thu Feb 21 01:54:18 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Revert to earlier tarballs - the new ones
	  don't work.

Thu Feb 21 01:50:17 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update with new tarballs.
